<resources>
    <string name="app_name">Bottle</string>

    <string name="facebook_app_id">149729492215450</string>
    <string name="fb_login_protocol_scheme">fb149729492215450</string>

    <string name="title_activity_fb_login">FbLoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_post">Post</string>
    <string name="title_activity_write_message">Write Message</string>
    <string name="facebook">Facebook</string>
    <string name="take_photo">Photo</string>
    <string name="Video">Video</string>
    <string name="recording">Recording</string>
    <string name="drawing">Drawing</string>
    <string name="link">Link</string>

    <string name="photo_picker_title">Pick your photo</string>

    <string name="welcome_to_bottle">BOTTLE</string>
    <string name="facebook_login_error">Can\'t login with facebook</string>

    <string name="title_activity_error">ErrorActivity</string>
    <string name="oops_message">OOPS @_@</string>
    <string name="something_wrong_message">Something wrong!</string>
    <string name="try_again">Try again</string>
    <string name="login_with_another">Another Account?</string>
    <string name="take_a_photo">Photo</string>
    <string name="record_a_video">Video</string>
    <string name="recording_your_voice">Recording</string>
    <string name="draw_a_image">Drawing</string>
    <string name="paste_a_link">Link</string>
    <string name="input_type_typing">Typing</string>
    <string name="input_type_emoji">Emoji</string>

    <string name="message_text_empty">I want to know how are you feeling :)</string>
    <string name="select_category">Select a category</string>
    <string name="category">Category</string>
    <string name="vote">Vote</string>
    <string name="chat">Chat</string>
    <string name="emotion">emotion</string>

    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
