<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_view"
    tools:context="com.blogspot.sontx.bottle.view.activity.WriteMessageActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/root_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_below="@+id/root_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/input_type_layout"
            android:layout_alignParentTop="true"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/layout_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.blogspot.sontx.bottle.view.custom.RichEmojiEditText
                    android:id="@+id/message_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences|textMultiLine">

                    <requestFocus />
                </com.blogspot.sontx.bottle.view.custom.RichEmojiEditText>

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/input_type_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider" />

            <ImageButton
                android:id="@+id/input_type_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_toolbar_margin"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_pets_black_24dp" />

            <CheckBox
                android:id="@+id/facebook_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/input_type_button"
                android:layout_toEndOf="@+id/input_type_button" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">
            <com.blogspot.sontx.bottle.view.custom.RichFloatingActionButton
                android:id="@+id/fab"
                style="@style/Widget.MaterialSheetFab.Fab"/>
        </LinearLayout>

        <!-- Overlay that dims the screen -->
        <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Circular reveal container for the sheet -->
        <io.codetail.widget.RevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <!-- Sheet that contains your items -->
            <android.support.v7.widget.CardView
                android:id="@+id/fab_sheet"
                style="@style/Widget.MaterialSheetFab.Sheet">

                <!-- Sheet items -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Photo -->
                    <TextView
                        android:id="@+id/fab_sheet_item_photo"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@drawable/ic_photo_black_24dp"
                        android:drawableStart="@drawable/ic_photo_black_24dp"
                        android:text="@string/take_photo" />

                    <!-- Video -->
                    <TextView
                        android:id="@+id/fab_sheet_item_video"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@drawable/ic_camera_black_24dp"
                        android:drawableStart="@drawable/ic_camera_black_24dp"
                        android:text="@string/Video" />

                    <!-- Recording -->
                    <TextView
                        android:id="@+id/fab_sheet_item_recording"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@drawable/ic_record_voice_over_black_24dp"
                        android:drawableStart="@drawable/ic_record_voice_over_black_24dp"
                        android:text="@string/recording" />

                    <!-- Drawing -->
                    <TextView
                        android:id="@+id/fab_sheet_item_drawing"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@drawable/ic_color_lens_black_24dp"
                        android:drawableStart="@drawable/ic_color_lens_black_24dp"
                        android:text="@string/drawing" />

                    <!-- Link -->
                    <TextView
                        android:id="@+id/fab_sheet_item_link"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@drawable/ic_link_black_24dp"
                        android:drawableStart="@drawable/ic_link_black_24dp"
                        android:text="@string/link" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </io.codetail.widget.RevealLinearLayout>
    </RelativeLayout>

</RelativeLayout>
